Define d in algorithm

--- a/paper/sections/framework.tex
+++ b/paper/sections/framework.tex
@@ -340,7 +340,7 @@ ${\InitialObj = \Obj(\InitialRL, \x, \y)}$
 \While {$Q$ not empty} \Comment{Stop when queue is empty}
 	\State $\Prefix \gets Q$.pop(\,) \Comment{Remove prefix~$\Prefix$ from the queue}
 	\If {$b(\Prefix, \x, \y) < \CurrentObj$} \Comment{\textbf{Bound}: Apply Theorem~\ref{thm:bound}}
-        \State $\Obj \gets \Obj(\RL, \x, \y)$ \Comment{Compute objective of rule list~$\RL$}
+        \State $\Obj \gets \Obj(\RL, \x, \y)$ \Comment{Compute objective of~$\Prefix$'s rule list~$\RL$}
         \If {$\Obj < \CurrentObj$} \Comment{Update best known RL \& objective}
             \State $(\CurrentRL, \CurrentObj) \gets (\RL, \Obj)$
         \EndIf
