Get rid of the stupid template stuff that was cluttering up the front page. (This makes Margo happy.)

--- a/paper/acmart.cls
+++ b/paper/acmart.cls
@@ -1375,12 +1375,12 @@ Computing Machinery]
   \andify\shortauthors
   \global\let\authors=\authors
   \global\let\shortauthors=\shortauthors
-  \if@ACM@printacmref
-     \@mkbibcitation
-  \fi
+  % \if@ACM@printacmref
+  %  \@mkbibcitation
+  %\fi
   \hypersetup{pdfauthor={\authors},
     pdftitle={\@title}, pdfkeywords={\@concepts}}%
-  \@printendtopmatter
+  %\@printendtopmatter
   \@afterindentfalse
   \@afterheading
 }
