--- a/paper/kdd17.tex
+++ b/paper/kdd17.tex
@@ -34,12 +34,11 @@
 
 \begin{document}
 \title{Learning certifiably optimal rule lists for categorical data}
-\titlenote{Produces the permission block, and
-  copyright information}
-\subtitle{Extended Abstract}
-\subtitlenote{The full version of the author's guide is available as
-  \texttt{acmart.pdf} document}
-
+% \titlenote{Produces the permission block, and
+%   copyright information}
+% \subtitle{Extended Abstract}
+% \subtitlenote{The full version of the author's guide is available as
+%  \texttt{acmart.pdf} document}
 
 \author{Elaine Angelino}
 %\authornote{Dr.~Trovato insisted his name be first.}
@@ -132,7 +131,7 @@
 % We no longer use \terms command
 %\terms{Theory}
 
-\keywords{rule lists, decision trees, optimization}
+\keywords{Rule lists, Decision trees, Optimization}
 
 \maketitle
 
