--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -1,4 +1,4 @@
-\section{Preliminary experiments}
+\section{Experiments}
 \label{sec:experiments}
 
 Our experimental analysis addresses four questions:
@@ -8,6 +8,7 @@ Our experimental analysis addresses four questions:
 (4) How much does each of the implementation optimizations contribute to CORELS' performance?
 All results presented use the COMPAS data set unless otherwise noted,
 and were executed on (describe machine) \dots
+[Sentence that we have more experiments]
 
 We first ran a 10-fold cross validation experiment using CORELS and eight other algorithms:
 GLM, SVM, AdaBoost, CART, C4.5, RF, RIPPER, and scalable rule lists (SBRL).
