Fig 3 with more detail

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -145,10 +145,11 @@ as a function of wall clock time.
 \begin{center}
 %\includegraphics[width=0.65\textwidth]{figs/sketch-objective.png}
 \begin{arxiv}
-\includegraphics[width=0.8\textwidth]{figs/ela_compas-remaining-space.pdf}
+\includegraphics[width=0.8\textwidth]{figs/compas_execution-remaining-space.pdf}
 \end{arxiv}
 \begin{kdd}
-\includegraphics[width=0.4\textwidth]{figs/ela_compas-remaining-space.pdf}
+% left lower right upper
+\includegraphics[trim={20mm, 20mm, 10mm, 5mm}, width=0.5\textwidth]{figs/compas_execution-remaining-space.pdf}
 \end{kdd}
 \end{center}
 \caption{Top: Objective value and lower bound as a function of wall clock time.
