--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -168,7 +168,7 @@ on the size of the remaining search space.}
 \begin{table}[t]
 \centering
 \begin{tabular}{l | c | c | c | c | c}
-Removed & $t_\text{total}$ & $t_\text{opt}$ & $K_\text{max}$ & $i_\text{total}$ & $\max | Q |$ \\
+Removed & $t_\text{total}$ & $t_\text{opt}$ & $K_\text{max}$ & $i_\text{total}$ & $Q_\text{max}$ \\
 component & (s) & (s) & & ($\times 10^6$) & ($\times 10^6$) \\
 \hline
 none (CORELS) & 336 & 7 & 6 & 1.61 & 1.37 \\
