--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -168,28 +168,43 @@ on the size of the remaining search space.}
 \begin{table}[t]
 \centering
 %\small
+\resizebox{0.49\textwidth}{!}{
 \begin{tabular}{l | c | c | c | c | c}
 Removed & $t_\text{total}$ & $t_\text{opt}$ & $i_\text{total}$ & $Q_\text{max}$ & $K_\text{max}$ \\
 component & (min) & (s) & ($\times 10^6$) & ($\times 10^6$) & \\
 \hline
 none (CORELS) & 4.8 (1.7) & 8 (3) & 1.5 (0.5) & 1.2 (0.4) & 5-6 \\
-priority queue & 5.8 (2.1) & 4 (0) & 1.7 (0.5) & 1.3 (0.5) & 5-6 \\
+priority queue & 5.8 (2.1) & 4 (1) & 1.7 (0.5) & 1.3 (0.5) & 5-6 \\
 support bounds & 8.7 (3.1) & 13 (5) & 2.4 (0.8) & 1.9 (0.7) & 5-6 \\
 permutation map & 48.7 (19.3) & 22 (9) & 13.5 (5.2) & 12.1 (4.7) & 5-6 \\
 lookahead bound & 64.3 (24.7) & 8 (3) & 16.3 (6.0) & 14.6 (5.5) & 6-7 \\
-equiv. pts. bound & $>$137 & ** & $>$800 & $>$790 & $\ge$10 \\
+equiv. pts. bound & $>$137 & ** & $>$800 & $>$790 & $\ge$10
 %equiv. pts. bound & --- & 48  & $>286$ & $>282$ & $\ge$ 10 \\
 \end{tabular}
+}
 \vspace{5mm}
-\caption{Per-component performance improvement. (Currently 3-fold)
-The columns report averages over 10 cross-validation folds for
-the total execution time, time to optimum, maximum evaluated prefix length,
+\caption{Per-component performance improvement.
+%
+The columns report the total execution time,
+time to optimum, maximum evaluated prefix length,
 number of queue insertions, and maximum queue size.
+%
 The first row corresponds to our full CORELS algorithm,
 and subsequent rows to variants that each exclude a specific
 implementation optimization or bound removed.
-(These experiments to do not measure the cumulative effects
-of simultaneously removing multiple components.)
+%
+(We do not measure the cumulative effects of removing a sequence of components.)
+%
+All rows represent complete executions, except for the final row,
+in which each execution was terminated, due to memory constraints,
+%once the size of the cache reached ${8 \times 10^8}$ elements,
+after consuming 390-410GB RAM.
+%
+In all but the final row and column, we report averages
+(with standard deviations, in parentheses) over 10 cross-validation folds;
+in the final row, we report minimum values across folds.
+%
+**~Only XXX folds in the final row achieve the optimum.
 }
 \label{tab:ablation}
 \end{table}
