Start to edit fig 2 caption + release LOCK

--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -152,9 +152,13 @@ as a function of wall clock time.
 \includegraphics[trim={20mm, 20mm, 10mm, 5mm}, width=0.45\textwidth]{figs/compas_execution-remaining-space.pdf}
 \end{kdd}
 \end{center}
-\caption{Top: Objective value and lower bound as a function of wall clock time.
+\caption{Two example executions of CORELS, with (solid lines)
+and without (dashed lines) the equivalent points bound,
+which in this case yields a significantly tighter lower bound.
 %
-Missing: horizontal lines and x-ticks for CART and C4.5.
+Top: Objective value and lower bound as a function of wall clock time (log scale).
+%
+%Missing: horizontal lines and x-ticks for CART and C4.5.
 %
 Bottom:
 $\lfloor \log_{10} \Remaining(\CurrentObj, \Queue) \rfloor$
