Flesh out Figure 3 caption and some tweaks to the figure

--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -2053,6 +2053,7 @@ whose prefix~$\Prefix$ starts with~$\Prefix$,
 \begin{arxiv}
 \begin{align}
 \Obj(\RL', \x, \y) \ge b(\Prefix, \x, \y) + b_0(\Prefix, \x, \y),
+\label{eq:identical}
 \end{align}
 where
 \end{arxiv}
