--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -241,7 +241,7 @@ in the final row, we report minimum values across folds.
 \end{center}
 \caption{Queue composition. % logical queue
 %
-Numbers of prefixes in the queue, colored by length (log scale),
+Numbers of prefixes in the queue (log scale), colored by length,
 as a function of wall clock time (log scale),
 for CORELS (top left), and without the permutation map (top right),
 lookahead bound (bottom left), and equivalent points bound (bottom right).
