--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -211,10 +211,10 @@ The first row corresponds to our full CORELS algorithm,
 and subsequent rows to variants that each exclude a specific
 implementation optimization or bound removed.
 %
-(We do not measure the cumulative effects of removing a sequence of components.)
+(We are not measuring the cumulative effects of removing a sequence of components.)
 %
 All rows represent complete executions, except for the final row,
-in which each execution was terminated, due to memory constraints,
+in which each execution was terminated due to memory constraints,
 %once the size of the cache reached ${8 \times 10^8}$ elements,
 after consuming 390-410GB RAM.
 %
