--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -191,21 +191,21 @@ on the size of the remaining search space.}
 Removed & $t_\text{total}$ & $t_\text{opt}$ & $i_\text{total}$ & $Q_\text{max}$ & $K_\text{max}$ \\
 component & (min) & (s) & ($\times 10^6$) & ($\times 10^6$) & \\
 \hline
-none (CORELS) & 4.8 (1.7) & 8 (3) & 1.5 (0.5) & 1.2 (0.4) & 5-6 \\
-priority queue & 5.8 (2.1) & 4 (1) & 1.7 (0.5) & 1.3 (0.5) & 5-6 \\
-support bounds & 8.7 (3.1) & 13 (5) & 2.4 (0.8) & 1.9 (0.7) & 5-6 \\
-permutation map & 48.7 (19.3) & 22 (9) & 13.5 (5.2) & 12.1 (4.7) & 5-6 \\
-lookahead bound & 64.3 (24.7) & 8 (3) & 16.3 (6.0) & 14.6 (5.5) & 6-7 \\
-equiv. pts. bound & $>$137 & ** & $>$800 & $>$790 & $\ge$10
-%equiv. pts. bound & --- & 48  & $>286$ & $>282$ & $\ge$ 10 \\
+none (CORELS) & 5.5 (1.6) & 8 (2) & 1.7 (0.4) & 1.3 (0.4) & 5-6 \\
+priority queue & 6.7 (2.2) & 4 (1) & 1.9 (0.6) & 1.5 (0.5) & 5-6 \\
+support bounds & 10.2 (3.4) & 13 (4) & 2.7 (0.8) & 2.2 (0.7) & 5-6 \\
+permutation map & 58.6 (23.3) & 23 (6) & 16.0 (5.9) & 14.5 (5.7) & 5-6 \\
+lookahead bound & 71.9 (23.0) & 9 (2) & 18.5 (5.9) & 16.3 (5.3) & 6-7 \\
+%equiv. pts. bound & 188.6 (104.6) & 6178 (1840) & 803.8 (0.1) & 790.5 (0.4) & 10-10
+equiv. pts. bound & $>$134 & $>$7168* & $>$800 & $>$789 & $\ge$10
 \end{tabular}
 }
 \vspace{5mm}
 \caption{Per-component performance improvement.
 %
-The columns report the total execution time,
-time to optimum, maximum evaluated prefix length,
-number of queue insertions, and maximum queue size.
+The columns report the total execution time (minutes),
+time to optimum (seconds), number of queue insertions (millions),
+maximum queue size (millions), and maximum evaluated prefix length.
 %
 The first row corresponds to our full CORELS algorithm,
 and subsequent rows to variants that each exclude a specific
@@ -220,9 +220,9 @@ after consuming 390-410GB RAM.
 %
 In all but the final row and column, we report averages
 (with standard deviations, in parentheses) over 10 cross-validation folds;
-in the final row, we report minimum values across folds.
+in the final row, we report minimum values across folds. \\
 %
-**~Only XXX folds in the final row achieve the optimum.
+*~Only 4 out of 10 folds achieve the optimum.
 }
 \label{tab:ablation}
 \end{table}
