--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -1,17 +1,19 @@
-\section{Lower bounds for proving optimality}
+%\section{Lower bounds for proving optimality}
+%
+%Our problem has rich structure beyond the hierarchical objective lower bound
+%in Theorem~\ref{thm:bound}, including several instances of symmetries.
+%%
+%In this section, we enumerate a series of additional bounds and
+%symmetries that combine to yield aggressive pruning opportunities
+%throughout the execution of our branch-and-bound algorithm.
+%%
+%We additionally quantify the computational consequences of many
+%of these observations.
+%%
+%Below, we begin with an immediate consequence of Theorem~\ref{thm:bound}.
+%%followed by a more general version of Theorem~\ref{thm:bound}.
 
-Our problem has rich structure beyond the hierarchical objective lower bound
-in Theorem~\ref{thm:bound}, including several instances of symmetries.
-%
-In this section, we enumerate a series of additional bounds and
-symmetries that combine to yield aggressive pruning opportunities
-throughout the execution of our branch-and-bound algorithm.
-%
-We additionally quantify the computational consequences of many
-of these observations.
-%
-Below, we begin with an immediate consequence of Theorem~\ref{thm:bound}.
-%followed by a more general version of Theorem~\ref{thm:bound}.
+Before proceeding, we state an immediate consequence of Theorem~\ref{thm:bound}.
 
 \begin{lemma}[Objective lower bound with one-step lookahead]
 \label{lemma:lookahead}
@@ -41,47 +43,47 @@ which includes the penalty for longer prefixes,
 Therefore, even if we encounter a prefix~$\Prefix$
 with lower bound ${b(\Prefix, \x, \y) \le \CurrentObj}$,
 if ${b(\Prefix, \x, \y) + \Reg \ge \CurrentObj}$, then we can prune
-all prefixes~$\Prefix'$ that start with and are longer than~$\Prefix$. \\
+all prefixes~$\Prefix'$ that start with and are longer than~$\Prefix$.
 
-Before proceeding, let us summarize the remainder of this section.
-%
-First, we prove upper bounds on prefix
-length~(\S\ref{sec:ub-prefix-length}),
-and corresponding upper bounds on the number of
-prefix evaluations~(\S\ref{sec:ub-size}).
-%
-\begin{arxiv}
-Next, we prove lower~(\S\ref{sec:lb-support})
-and upper~(\S\ref{sec:ub-support}) bounds on antecedent support,
-and provide a unified analysis of consequences of
-these antecedent support bounds~(\S\ref{sec:reject}).
-\end{arxiv}
-\begin{kdd}
-Next, we prove lower~(\S\ref{sec:lb-support}) bounds on
-antecedent support, and describe algorithmic consequences.
-\end{kdd}
-%
-We then analyze rule lists whose prefixes
-capture the same data~(\S\ref{sec:equivalent}),
-which enables symmetry-aware garbage collection.
-%
-In particular, we highlight the special case of prefixes
-that are equivalent up to a permutation of their
-antecedents~(\S\ref{sec:permutation});
-this enables permutation-aware garbage collection,
-which we characterize via another upper bound on
-the number of prefix evaluations~(\S\ref{sec:permutation-counting}).
-%
-\begin{arxiv}
-Next, we slightly generalize the result from~\S\ref{sec:equivalent}
-to rule lists whose prefixes capture nearly the same data~(\S\ref{sec:similar}).
-%
-\dots
-\end{arxiv}
-%
-Finally, we show how to tighten the objective lower bound,
-sometimes dramatically, when the data of interest partitions
-into non-singleton equivalence classes~(\S\ref{sec:identical}).
+%Before proceeding, let us summarize the remainder of this section.
+%%
+%First, we prove upper bounds on prefix
+%length~(\S\ref{sec:ub-prefix-length}),
+%and corresponding upper bounds on the number of
+%prefix evaluations~(\S\ref{sec:ub-size}).
+%%
+%\begin{arxiv}
+%Next, we prove lower~(\S\ref{sec:lb-support})
+%and upper~(\S\ref{sec:ub-support}) bounds on antecedent support,
+%and provide a unified analysis of consequences of
+%these antecedent support bounds~(\S\ref{sec:reject}).
+%\end{arxiv}
+%\begin{kdd}
+%Next, we prove lower~(\S\ref{sec:lb-support}) bounds on
+%antecedent support, and describe algorithmic consequences.
+%\end{kdd}
+%%
+%We then analyze rule lists whose prefixes
+%capture the same data~(\S\ref{sec:equivalent}),
+%which enables symmetry-aware garbage collection.
+%%
+%In particular, we highlight the special case of prefixes
+%that are equivalent up to a permutation of their
+%antecedents~(\S\ref{sec:permutation});
+%this enables permutation-aware garbage collection,
+%which we characterize via another upper bound on
+%the number of prefix evaluations~(\S\ref{sec:permutation-counting}).
+%%
+%\begin{arxiv}
+%Next, we slightly generalize the result from~\S\ref{sec:equivalent}
+%to rule lists whose prefixes capture nearly the same data~(\S\ref{sec:similar}).
+%%
+%\dots
+%\end{arxiv}
+%%
+%Finally, we show how to tighten the objective lower bound,
+%sometimes dramatically, when the data of interest partitions
+%into non-singleton equivalence classes~(\S\ref{sec:identical}).
 
 \subsection{Upper bounds on prefix length}
 \label{sec:ub-prefix-length}
