Move incremental into implementation and release LOCKs

--- a/paper/sections/implementation.tex
+++ b/paper/sections/implementation.tex
@@ -1,6 +1,8 @@
 \section{Implementation}
 \label{sec:implementation}
 
+\input{sections/incremental}
+
 We implement our algorithm using a collection of optimized data structures:
 a trie, a symmetry-aware map, and a queue.
 The trie acts like a cache, keeping track of rule lists we have already evaluated.
