--- a/paper/sections/bounds.tex
+++ b/paper/sections/bounds.tex
@@ -13,7 +13,7 @@
 %Below, we begin with an immediate consequence of Theorem~\ref{thm:bound}.
 %%followed by a more general version of Theorem~\ref{thm:bound}.
 
-Before proceeding, we state an immediate consequence of Theorem~\ref{thm:bound}.
+Next, we state an immediate consequence of Theorem~\ref{thm:bound}.
 
 \begin{lemma}[Objective lower bound with one-step lookahead]
 \label{lemma:lookahead}
