Add subsection title for central bound

--- a/paper/sections/framework.tex
+++ b/paper/sections/framework.tex
@@ -273,6 +273,8 @@ In particular, the number of mistakes on these observations will be at least
 the number of observations with the minority label. (Theorem~\ref{thm:identical})
 \end{itemize}
 
+\subsection{Hierarchical objective lower bound}
+
 We can decompose the misclassification error into two contributions
 corresponding to the prefix and default:
 \begin{align}
