--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -6,9 +6,16 @@ Our experimental analysis addresses four questions:
 (2) How rapidly does the objective function converge?
 (3) How rapidly does CORELS prune the search space?
 (4) How much does each of the implementation optimizations contribute to CORELS' performance?
-All results presented use the COMPAS data set unless otherwise noted,
-and were executed on (describe machine) \dots
-[Sentence that we have more experiments]
+
+All results presented use the ProPublica dataset unless otherwise noted,
+and were executed on a server with two Intel Xeon E5-2699~v4
+(55M~cache, 2.20~GHz) processors and 448GB~RAM.
+%
+Except where we mention a memory constraint, all experiments
+can run comfortably on smaller machines, \eg a laptop with 16GB~RAM.
+%
+Due to page constraints, we only present a subset of experiments
+from an extensive evaluation contained in a long version of this~report.
 
 We first ran a 10-fold cross validation experiment using CORELS and eight other algorithms:
 GLM, SVM, AdaBoost, CART, C4.5, RF, RIPPER, and scalable rule lists (SBRL).
