Add footnote on missing proofs

--- a/paper/sections/framework.tex
+++ b/paper/sections/framework.tex
@@ -249,7 +249,15 @@ Our objective has structure amenable to global optimization via a branch-and-bou
 In particular, we make a series of important observations that each translates into
 a useful bound, and together interact to eliminate large parts of the search space.
 %
-We will discuss these in depth throughout the following sections:
+We will discuss these in depth throughout the following
+\begin{arxiv}
+sections:
+\end{arxiv}
+\begin{kdd}
+sections:~\footnote{Due to page constraints, we include only a few
+relevant proofs; we include additional theorems and all proofs
+in a long version of this report.}
+\end{kdd}
 %
 \begin{itemize}
 \item Lower bounds on a prefix also hold for every extension of that prefix.
